# PugDock

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  git_sync.rs  lib.rs  main.rs  search.rs  secrets.rs  theme.rs  update.rs  workspace.rs
src-tauri/src/integrations/: anthropic.rs  github.rs  mod.rs
src/lib/: ai.ts  api.ts  chat.svelte.ts  pdftext.ts  state.svelte.ts  sync.ts  theme.svelte.ts  update.ts  workspaces.ts
src/lib/components/: AiFab.svelte  AiPanel.svelte  Chat.svelte  CodeEditor.svelte  ConflictDialog.svelte  FileTree.svelte  HistoryPanel.svelte  MarkdownView.svelte  Onboarding.svelte  PdfViewer.svelte  SearchPanel.svelte  SettingsPanel.svelte  Workspace.svelte
src/routes/: +page.svelte
