[package]
name = "pugdock"
version = "0.1.0"
description = "PugDock — your developer workspace, synced privately with GitHub."
authors = ["PugDock"]
edition = "2021"

[lib]
name = "pugdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["process", "time", "net", "io-util"] }
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
